--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: electron-wokiosk
-version: '0.1wokiosk'
+version: '0.1'
 summary: Hello World Electron app
 description: |
   Simple Hello World Electron app as an example
