--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: electron-hello-world-kiosk
+name: electron-wokiosk
 version: '0.1'
 summary: Hello World Electron app
 description: |
@@ -8,7 +8,7 @@ confinement: strict
 grade: devel
 
 apps:
-  electron-hello-world-kiosk:
+  electron-wokiosk:
     command: desktop-launch "$SNAP/electron-helloworld/electron-quick-start"
     plugs:
     - browser-sandbox
