--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -9,7 +9,7 @@ grade: devel
 
 apps:
   electron-wokiosk:
-    command: desktop-launch "$SNAP/electron-helloworld/electron-quick-start"
+    command: desktop-launch "/snap/electron-wokiosk/x1"  "--no-sandbox"
     plugs:
     - browser-sandbox
     - network
